--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NodeJS CRUD</title>
+    <title>Node.js CRUD</title>
+    {{!-- NB: Don't forget the leading slash ('/') before the 'static' folder --}}
+    <link rel="stylesheet" href="/static/fontawesome-free-5.15.1-web/css/all.min.css">
+    {{!-- <link rel="stylesheet" href="/static/materialize-v1.0.0/css/materialize.min.css"> --}}
+    <link rel="stylesheet" href="/static/bootstrap-4.5.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/custom/css/style.css">
 </head>
 <body>
     {{{body}}}
+
+    {{!-- <script src="/static/materialize-v1.0.0/js/materialize.min.js"></script> --}}
+    <link rel="stylesheet" href="/static/bootstrap-4.5.3-dist/js/bootstrap.min.js">
+    <script src="/static/custom/js/script.js"></script>
 </body>
 </html>
