--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,7 +11,14 @@
     <link rel="stylesheet" href="/static/custom/css/style.css">
 </head>
 <body>
-    {{{body}}}
+    <div class="container my-4">
+        <div class="row">
+            <div class="col-md-12">
+                {{!-- {{{body}}} is used as placeholder for where main content should be rendered. --}}
+                {{{body}}}
+            </div>
+        </div>
+    </div>
 
     {{!-- <script src="/static/materialize-v1.0.0/js/materialize.min.js"></script> --}}
     <link rel="stylesheet" href="/static/bootstrap-4.5.3-dist/js/bootstrap.min.js">
