--- a/views/products/index.hbs
+++ b/views/products/index.hbs
@@ -1,1 +1,45 @@
-<h1>Products</h1>
+<h3>Node.js CRUD - Products</h3>
+<a href='/products/add' class="btn btn-primary btn-md mt-4 mb-5">
+    <i class="fas fa-plus mr-2"></i> ADD NEW RECORD
+</a>
+
+{{#if products}}
+<table class="table table-striped">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Product Code</th>
+        <th>Name</th>
+        <th>Category</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Date Added</th>
+        <th class="nosort">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+        {{#each products}}
+        <tr>
+            {{!-- refernce current loop index --}}
+            <td>{{@index}}</td>
+            <td>{{productCode}}</td>
+            <td>{{name}}</td>
+            <td>{{category}}</td>
+            <td>{{price}}</td>
+            <td>{{quantity}}</td>
+            <td>{{dateAdded}}</td>
+            <td>
+                <a href="/products/edit/{{id}}" class="btn btn-warning btn-sm mb-1">
+                    <i class="fas fa-pencil-alt"></i>
+                </a>
+                <a href="#" class="btn btn-danger btn-sm mb-1">
+                    <i class="fas fa-trash"></i>
+                </a>
+            </td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
+{{else}}
+<h5>No products to display</h5>
+{{/if}}
