--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,7 +13,7 @@
 <body>
     <div class="container my-4">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-12">
                 {{!-- {{{body}}} is used as placeholder for where main content should be rendered. --}}
                 {{{body}}}
             </div>
