--- a/views/products/index.hbs
+++ b/views/products/index.hbs
@@ -29,7 +29,7 @@
             <td>{{quantity}}</td>
             <td>{{formatDate dateAdded 'MMM D, YYYY'}}</td>
             <td>
-                <a href="/products/edit/{{id}}" class="btn btn-warning btn-sm mb-1">
+                <a href="/products/edit/{{_id}}" class="btn btn-warning btn-sm mb-1">
                     <i class="fas fa-pencil-alt"></i>
                 </a>
                 <a href="#" class="btn btn-danger btn-sm mb-1">
